Bug 146256 - Customization for Base "Standard" toolbar is stored in document even if "Base" is selected in scope
Summary: Customization for Base "Standard" toolbar is stored in document even if "Base...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
6.3.0.4 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:25.8.0 target:25.2.5
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Toolbars Base-UX
  Show dependency treegraph
 
Reported: 2021-12-16 09:52 UTC by Andreas Säger
Modified: 2025-06-10 06:50 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Säger 2021-12-16 09:52:51 UTC
Version: 7.2.4.1 / LibreOffice Community
Build ID: 27d75539669ac387bb498e35313b970b7fe9c4f9
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: x11
Locale: de-DE (de_DE.UTF-8); UI: en-US
Calc: threaded

Open a Base document. Do not edit.
Tools>Customize... Toolbar
Scope: LibreOffice Base
Add some button to the Base Standard toolbar, say "About LibreOffice".
Close the document. Notice the prompt for saving.
Open another document. The toolbar is unmodified.
Expected: Since I modified the toolbar in the scope of LO Base, the new button should be availlable for every document. 
Works as expected with Writer.
I have a fresh user profile, the third one this year :(
Comment 1 stragu 2021-12-18 13:54:27 UTC
I can reproduce with:

Version: 7.2.4.1 / LibreOffice Community
Build ID: 27d75539669ac387bb498e35313b970b7fe9c4f9
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

I opened a database, changed the standard toolbar on that first screen, closed (and saved as prompted). The change is not visible when opening a different database.

This seems inconsistent with, for example, the modifications to a toolbar when modifying a table: these changes are persistent across files.

Also reproduced with:

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 06ac18e6302d666c363740644a7976e8c22d1113
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 2 QA Administrators 2023-12-19 03:11:25 UTC Comment hidden (obsolete)
Comment 3 Andreas Säger 2023-12-19 12:26:42 UTC
Still in 

Version: 7.6.4.1 (X86_64) / LibreOffice Community
Build ID: e19e193f88cd6c0525a17fb7a176ed8e6a3e2aa1
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: x11
Locale: de-DE (de_DE.UTF-8); UI: en-US
Calc: threaded
Comment 4 Andreas Säger 2024-06-18 09:46:35 UTC
Still in 

Version: 24.2.4.2 (X86_64) / LibreOffice Community
Build ID: 51a6219feb6075d9a4c46691dcfe0cd9c4fff3c2
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: x11
Locale: de-DE (de_DE.UTF-8); UI: en-US
Calc: threaded

The GUI reflects the customized toolbar in the LibreOffice Base scope as well as in the document scope. The modification is stored in the database document, where it was not intended to be stored. 
The same feature works as expected in other components.
Comment 5 stragu 2024-06-18 15:07:07 UTC
Issue started in 6.3: reproduced in 6.3.0.4, not reproduced in 6.2.0.3.
Comment 6 Saburo 2025-06-05 08:13:32 UTC
bibisected with win32-6.3
Version: 6.3.0.0.alpha0+
Build ID: ccb2b0078f07194befa61f1e3fd88e53ff236871
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
Locale: ja-JP (ja_JP); UI-Language: en-US
Calc: threaded

author	Caolán McNamara
commit ccb2b0078f07194befa61f1e3fd88e53ff236871

weld SvxMenuConfigPage/SvxToolbarConfigPage
Change-Id: I166ac6c0be8461ea38db711796d1e14fc5b78998
Reviewed-on: https://gerrit.libreoffice.org/68889
***
adding to cc: Caolán McNamara
Comment 7 Commit Notification 2025-06-06 23:24:59 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c1cca4609fed192c3b309c2955b82c2c236b088f

Related: tdf#146256 select base's "standard" toolbar by default

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-06-06 23:26:02 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e24aa1d0f692cb6d64c00353356b0731e9afbadc

Resolves: tdf#146256 Base toolbar customization page displays wrong scope

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2025-06-10 06:50:14 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/f49974e59ae6636bfb44503ab04f99f96e75de75

Resolves: tdf#146256 Base toolbar customization page displays wrong scope

It will be available in 25.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.