Related: tdf#146256 select base's "standard" toolbar by default

in the customize dialog. The other modules select "standard" by default,
but base's "standard" toolbar has a different resource url than the
others.

Change-Id: I0f53691f83bcaf78a681a2862c595f61fdfb16dc
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186230
Tested-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>